--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -10,5 +10,9 @@ body{ background-color: #e5e4e2 ;
     height: 180px; 
     background-color: rgb(80, 80, 80); 
 }
+button {
+    background-color: ;
+font-family: arial black; color:white;
 
+}
 
