--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -12,7 +12,7 @@ body{ background-color: #e5e4e2 ;
 }
 button {
     background-color: #c4a96c 
-   font-family: arial; color: #c4a96c;
+    color: white
 
 }
 
