--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -11,7 +11,7 @@ body{ background-color: #e5e4e2 ;
     background-color: rgb(80, 80, 80); 
 }
 button {
-    background-color: #c4a96c;
+    background-color: yellow;
     color: white;
     padding:16px 20px;
     border: none;
