--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -18,7 +18,16 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-
-
 }
+
+.botao-amarelo {
+    background-color: yellow;
+    color: white;
+    padding: 10px 20px; /* Ajuste o preenchimento conforme necessário */
+    border: none; /* Para remover a borda padrão do botão */
+    border-radius: 5px; /* Para adicionar cantos arredondados */
+    cursor: pointer; /* Para mostrar um cursor ao passar o mouse */
+    font-size: 16px; /* Ajuste o tamanho da fonte conforme necessário */
+}
+
 
