--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -1,4 +1,4 @@
-body{ 
+.container { 
     background-image: url('/img/Kisbertfundo.png');
     background-size: cover; /* Para cobrir toda a área do body */
     background-position: center; /* Para centralizar a imagem */
