--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -1,8 +1,8 @@
 body { 
     background-image: url('./img/Kisbertfundo.png'); 
-    background-size: cover; /* Para cobrir toda a área do body */
-    background-position: center; /* Para centralizar a imagem */
-    background-repeat: no-repeat; /* Para evitar repetição da imagem */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;
  
     
 }
