--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -15,7 +15,7 @@ body {
     background-color: rgb(80, 80, 80); 
 }
 button {
-    background-color: #c4a96c;
+    background-color: black;
     color: white;
     padding:10px 10px;
     border: none;
