--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -12,7 +12,7 @@ body {
 .retangulo {
     width: 100%px; 
     height: 180px; 
-    background-color: rgb(80, 80, 80); 
+    background-color: black (80, 80, 80); 
 }
 button {
     background-color: black;
