--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -1,3 +1,7 @@
+
+
+
+
 body { 
     background-image: url('/img/Kisbertfundo.png'); 
     background-size: cover; 
@@ -5,24 +9,34 @@ body {
     background-repeat: no-repeat;
 }
 .figure {
-    margin:10px
+    margin: 20px;
 }
-
+.figure1 {
+    margin: 55px;
+}
 
 .retangulo {
     width: 100%; 
     height: 180px; 
-    background-color: rgb(69, 69, 69); 
-}
+    background-color: rgb(0, 0, 0); 
+}   
 
 button {
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding:10px 10px;
-    border: none;
-    border-radius: 20px;
+    border: 5px solid #caa862;
+    border-radius: 50px;    
+    
+    
+    
     cursor: pointer;
     font-size: 16px;
+    width: 110px;
+    height: 55px;
+
+
+
 }
 
 
