--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -7,6 +7,7 @@ body {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
+    
 }
 .figure {
     margin: 20px;
@@ -15,11 +16,7 @@ body {
     margin: 55px;
 }
 
-.retangulo {
-    width: 100%; 
-    height: 180px; 
-    background-color: rgb(0, 0, 0); 
-}   
+ 
 
 button {
     background-color: rgb(255, 255, 255);
@@ -28,16 +25,41 @@ button {
     border: 5px solid #caa862;
     border-radius: 50px;    
     
-    
-    
     cursor: pointer;
     font-size: 16px;
     width: 110px;
     height: 55px;
 
-
-
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
 
+.a:hover{
+    opacity: 0.7;
+}
 
+.logo{
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+ .nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background: black;
+    height: 15vh;
+ }
+ .nav1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background: white;
+    height: 11vh;
+    width: 130vh;
+}
