--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 min-height: 100vh;
-background: url(telaloginteste.png) no-repeat;
+background: url(/img/telaloginteste.png) no-repeat;
 background-size: cover;
 background-position: center; 
 }
