--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -3,7 +3,7 @@
 
 
 body { 
-    background-image: url('./workspaces/web-kisbert/img/Kisbertfundo.png'); 
+    background-image: url('/workspaces/web-kisbert/img/Kisbertfundo.png'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
